# ghConcept

./: .gitignore  README.md  pyproject.toml  requirements.txt
gh_concept/: __init__.py  views.py
gh_concept/components/: add_area_load.py  add_area_spring.py  add_beam.py  add_column.py  add_line_load.py  add_line_spring.py  add_line_support.py  add_loading_layer.py  add_opening.py  add_point_load.py  add_point_spring.py  add_point_support.py  add_slab.py  add_slab_area.py  add_wall.py
gh_concept/concept/: add_loading.py  add_structure.py  geometry.py  model.py
gh_concept/rhino/: geometry.py
