[project]
name = "gh-concept"
version = "0.1.0"
description = "because every RAM needs a Grasshopper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "ghhops-server>=1.5.5",
    "requests>=2.32.3",
    "rhino3dm>=8.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]
